[tool.poetry]
name = "learning management system"
version = "0.1.0"
description = "Simple Learning Management System"
authors = ["Asish <samantaray.asish04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.25.0"
fastapi = "^0.109.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
